# LocalLibrary

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
@components/ui/card/: package.json
public/: index.html
server/: .env  database.py  import_data.py  library.db  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scan_lib.py  schema.sql  schemas.py  server.js
server/routers/: books.py  sessions.py  stats.py
src/: App.js  App.jsx  BookSelector.jsx  LibraryAnalytics.js  LibraryAnalytics.jsx  ReadingMetrics.js  ReadingMetrics.jsx  index.css  main.jsx
src/components/: SessionAdd.jsx
src/components/ui/: button.jsx  progress.jsx
src/hooks/: useLibraryStats.js
