[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlmodel==0.0.8",
    "pymysql==1.1.0",
    "python-dotenv==1.0.0",
    "pypdf2>=3.0.1",
    "anthropic>=0.42.0",
]
